Introduced a routing system in the functionality where the user would get rerouted to a new page after clicking submit. Now the user is able to go from one page to the next using the Link function wrapped around the button. For future work, will finish the Submission page by showing the quiz_questions array, the selected_options array, and the options will be green or red if it is right or wrong, respectively. The page will also show the percent correct under the shown arrays.

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@
 }
 
 .quiz-options.selected {
-  background-color:beige;
+  background-color: white;
+  color: #4a5568;
 }
 
 .icon {
